*** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***

* SNAPSHOT May 23-2, 2016
  * Win32 binary only RELEASE
  * Fix unable to run with some natibve Windows environment.
  * Build with c1448dc84f5439c7c8931614a8397dbefb6383da .

-- May 24, 2016 22:42:00 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT May 23, 2016
  * Upstream 2016-04-13 .
  * [Win32] Now built with -msse -msse2 . You can run only later than Pentium4 .
  * Move FILEIO:: FIFO:: COMMON:: to libCSPemu_utils .
  * Make OSD:: to inherited by OSD_BASE:: .
  * [Win32] Disable LINKFLAGS with "-static-libgcc -static-libstdc++" to reduce size of executions, now, bundled libstc++ is for gcc-5 .
  * [Win32/Build] Support build with MSYS2 (but not display because MSYS2's Qt was build without OpenGL).
  * [Linux] Build shared libraries with Link-Time-Optimize, reduce size of libs.
  * [X1/VM] Configurable buttons for X1/Turbo/Turbo Z.
  * [FM7/FDC] Set MB8877_NO_BUSY_AFTER_SEEK. Fixed unable to boot OS0. Thanks to Anna_Wu.
  * [FM77AV/MB61VH010] ALULINE: Reduce CPU usage (at delta X > delta Y).
  * [UI/Qt/DRAW] Fix crash sometimes when exit emulator.
  * Build with 1c1ddc85dfa7456b1ce48662c2e2930dcc4fc9d8 (or later).

-- May 23, 2016 02:22:07 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT May 11, 2016
  * Merge upstream 2016-04-13 .
  * Move more files to libCSPgui , includes FILEIO, FIFO, COMMON, draw_thread , joy_thread and main().
  * Now SONAME of libCSPgui to 1.1.x .
  * [FM77AV/MB61VH010] Fix bugs within ALULINE now, Sylpheed and demonstration of FM77AV (not AV40) works fine.
  * [FM7/KEYBOARD] Add auto stop key (using 8 or 5).
  * [FM77AV/KEYBOARD] Add hidden buzzer and features for AMNORK.
  * [FM8] Fix not booting from floppy, thanks to Anna_Wu.
  * [FM7/FM8] Add "Connect 320KB FDD" 
     You should check this at first when using FDDs.
  * [FM77AV/DISPLAY] Move sequence copying vram to shadow-vram ; from HBLANK to HDISP .