@@ -1,6 +1,6 @@
 ** Qt porting and FM-7/77/AV/AV40/EX for Common Source Code Project **
 
-                                                          May 24, 2016
+                                                         June 08, 2016
                             K.Ohta  (whatisthis.sowhat _at_ gmail.com)
 
 1.About
@@ -9,18 +9,18 @@ This package is Qt5 porting of Common Source Code Project (CSP)
 and built with Qt5, for Windows, built with MinGW(32bit).
 
 Source Code:
-   https://github.com/Artanejp/common_source_project-fm7/releases/tag/SNAPSHOT_20160523_2
+   https://github.com/Artanejp/common_source_project-fm7/releases/tag/SNAPSHOT_20160608
    
 Additional INFO:
 GNU/Linux with AMD64 binaries and Win32 with MINGW binaries are avaiable, packed with 7zip'ed format:
 
-   https://www.sendspace.com/file/a8wxht
+   
     or
-   http://www1.axfc.net/u/3669758
+   
 
-  SIZE: 46223626
-  MD5SUM: 5c0015126e06d43249c65938c8a452df
-  SHA256SUM: eb775b3fdae5fe39dbebcef6aee27566d40572ebb0aefeb0c4eacde4cf4d2a34
+  SIZE: 
+  MD5SUM: 
+  SHA256SUM: 
 
 2.Background
 Common Source Code Project (CSP) is good emulator writing.
@@ -83,6 +83,14 @@ Upstream (Takeda Toshiya San's original code)
 http://homepage3.nifty.com/takeda-toshiya/
 
 Changes:
+
+* SNAPSHOT June 08, 2016
+  * Upstream 2016-04-13 .
+  * Add movie saver, using libav with x264.
+  * Now, all of binaries are built with ffmpeg-3.0.
+  * Build with 2142d5c7426e21cfeedbaea0450f238f8b4d7d38 (or later).
+
+-- Jun 08, 2016 07:34:45 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT May 23-2, 2016
   * Win32 binary only RELEASE
