@@ -1,6 +1,7 @@
 <B><FONT SIZE=-1>Upstream 20160413<BR>
-Qt Port and FM7 series 20160523-2<BR>
-libCSPgui 1.2.0<BR>
-libCSPosd 1.1.0<BR>
-libCSPemu_utils 1.0.0<BR>
+Qt Port and FM7 series 20160608<BR>
+libCSPavio 1.1.0<BR>
+libCSPgui 1.3.0<BR>
+libCSPosd 1.2.0<BR>
+libCSPemu_utils 1.0.1<BR>
 </FONT></B>
