@@ -9,11 +9,12 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-SNAPSHOT 2016-05-23-2<BR>
-LIBCSPEMU_UTILS 1.0.0<BR>
-LIBCSPGUI 1.2.0<BR>
-LIBCSPOSD 1.1.0<BR>
-Build Version: c1448dc84f5439c7c8931614a8397dbefb6383da<BR>
+Qt Port and FM7 series 2016-06-08<BR>
+libCSPavio 1.1.0<BR>
+libCSPgui 1.3.0<BR>
+libCSPosd 1.2.0<BR>
+libCSPemu_utils 1.0.1<BR>
+Build Version: 2142d5c7426e21cfeedbaea0450f238f8b4d7d38<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
